# structured-cot

./: .gitignore  README.md  RESULTS.md  compare_tool_call_latency.py  dynamic_grammar_probe.py  dynamic_grammar_spec_probe.py  fsm_grammar.gbnf  fsm_grammar_lcb.gbnf  fsm_grammar_lcb_bounded_no_comments.gbnf  fsm_grammar_lcb_code_start_bounded.gbnf  fsm_grammar_lcb_fenced.gbnf  fsm_grammar_lcb_no_comments.gbnf  fsm_grammar_lcb_plan.gbnf  fsm_vs_free_eval.py  llama_tool_grammar_repro.py  make_tps_animation.py  pyproject.toml  run_llama_server.sh  run_server.sh  run_sglang_server.sh  run_vllm_server.sh  slurm_vllm_server_1gpu.sbatch  slurm_vllm_server_generic.sbatch  terminal_bench_structured_cot_agent.py
grammars/: fsm_grammar_pi_think.gbnf  fsm_grammar_pi_turn.gbnf
scripts/: analyze_vllm_matrix.py  apply_llama_cpp_pre_trigger_grammar_patch.sh  build_llama_cpp.sh  build_sft_dpo_dataset.py  cache_transition_embeddings.py  extract_thinking_hidden_trajectory.py  generate_persona_pi_tasks.py  generate_pi_rpc_traces.py  grammar_proxy.py  grammar_rollout_batch.py  grammar_rollout_one.py  grammar_rollout_r2e.py  import_tracejepa_qwen27.py  inspect_failures.py  install_llama_cpp_cuda.sh  install_systemd.sh  install_vllm.sh  make_etpi_repo_tasks.py  make_etpi_step_dataset.py  make_latent_transition_dataset.py  make_slime_pi_prompts.py  merge_lora.py  plot_hidden_trajectory.py  prepare_agenttrove_mqe.py  prepare_hermes_dsl_sft.py  prepare_strict_dsl_sft.py  repair_pi_trace_sessions.py  run_current_model_matrix.sh  run_current_model_matrix_parallel.sh  run_terminal_bench_smoke.sh  (+17 more)
(+27 files in other folders)
